--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,22 @@
 	font-size: inherit;
 }
 
-footer ul > li > ul > li {
-	margin-left: 10px;
-	font-size: 12px;
+footer .inline li {
+	font-size: 18px;
+	margin-right: 15px;
+	padding: 5px;
+}
+
+footer .inline a:hover {
+	border-bottom: 2px solid #e7ab3b!important;
+}
+	
+footer .footer-active {
+	border-bottom: 2px solid #fff!important;
+}
+
+footer .inline li:last-child {
+	margin-right: 0px;
 }
 
 .inline li{
